KJHH-2072: Minor refactoring for tests